# gitpractice

./: README.md
real/KCircle/: KCircle.cmake
real/KCircle/include/: KCircle.h
real/KCircle/src/: KCircle.cpp
real/KCircleMain/: CMakeLists.txt  main.cpp
vm/: 第一个文档.txt
